invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_23.src
.IPPcode24
IDIV TF@b